# geometry-central

./: .conanignore  .gitignore  CMakeLists.txt  CONAN.md  CONAN_BEST_PRACTICES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_CONAN.md  README.md  TESTING_CONAN.md  conandata.yml  conanfile.py  conanprofile.example  test_conan.sh
cmake/: geometry-centralConfig.cmake.in
docs/docs/surface/geometry/: custom_quantities_example.md  geometry.md
examples/conan_consumer/: CMakeLists.txt  README.md  conanfile.py  main.cpp
include/geometrycentral/surface/: base_geometry_interface.h  embedded_geometry_interface.h
src/: CMakeLists.txt
src/surface/: embedded_geometry_interface.cpp
test/src/: halfedge_geometry_test.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
